--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^9.0.11",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-eslint-parser": "^9.4.2"
   },
   "husky": {
     "hooks": {
